# SatDump_Publisher

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
satdump_publisher/: cli.py  db.py
satdump_publisher/templates/: index.html
satdump_publisher/templates/static/: style.css
