[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satdump-publisher"
version = "0.1.0"
description = "Minimal satdump publisher CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Drew Maatman"}]
dependencies = ["Pillow>=9.0.0", "Jinja2>=3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["satdump_publisher*"]

[tool.setuptools.package-data]
"satdump_publisher" = ["templates/*", "templates/*/*"]

[project.scripts]
satdump_publisher = "satdump_publisher.cli:main"
